--- a/mccarter-portfolio/src/index.css
+++ b/mccarter-portfolio/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   --eerie-black: hsla(144, 7%, 13%, 1);
   --caribbean-current: hsla(181, 52%, 27%, 1);
   --jungle-green: hsla(152, 37%, 46%, 1);
@@ -20,6 +21,7 @@ code {
     monospace;
 }
 
+/* Navbar */
 .navbar {
   background-color: var(--eerie-black);
   display: flex;
@@ -46,13 +48,23 @@ code {
   cursor: pointer;
 }
 
+.navbar-menu-item:hover {
+  font-weight: bold;
+}
+
+.navbar-menu-item.active {
+ color: var(--cambridge-blue);
+ font-weight: bold;
+}
+
+/* About Me */
 .about-me {
   display: wrap;
   padding: 2%;
-  text-align: center;
+  
 }
 
-.about-me-header {
+.about-me-header{
   text-align: left;
 }
 
@@ -62,5 +74,176 @@ code {
   max-width: 300px;
   border-radius: 50%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
 
+.education {
+  padding-bottom: 2%;
+}
+
+/* Contact */
+.contact-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.form-button {
+  padding: 8px 16px;
+  background-color: var(--caribbean-current);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form-button:hover {
+  background-color: var(--jungle-green);
+}
+
+/* Resume */
+.resume {
+  padding: 2%;
+}
+
+.download-button {
+  padding: 8px 16px;
+  background-color: var(--caribbean-current);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.download-button:hover{
+  background-color: var(--jungle-green);
+}
+
+/* projects styling */
+.project-section{
+  padding: 2%;
+}
+
+.projects-button{ 
+  padding: 8px 16px;
+  background-color: var(--caribbean-current);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+  margin-right: 2%;
+  margin-bottom: 2%;
+}
+
+.projects-button:hover {
+  background-color: var(--jungle-green);
+}
+
+.projects-button a {
+  color: inherit; 
+  text-decoration: none; 
+}
+
+.project-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.project {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.project-image {
+  flex: 0 0 200px;
+  margin-right: 20px;
+}
+
+.project-image img {
+  width: 100%;
+  height: auto;
+}
+
+.project-details {
+  flex: 1;
+}
+
+.project-details h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.project-details p {
+  margin-bottom: 10px;
+}
+
+.project-links {
+  margin-top: 10px;
+}
+
+.projects-button {
+  margin-right: 10px;
+}
+
+/* Footer */
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--cambridge-blue);
+  padding: 1%;
+  text-align: center;
+}
+
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-icons a {
+  margin: 0 10px;
+  color: var(--jungle-green);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.footer-icons a:hover {
+  color: var(--caribbean-current);
 }
